--- a/testapp/nodeapp/package.json
+++ b/testapp/nodeapp/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "net-ping": "^1.2.3",
     "nodemon": "^2.0.12",
+    "python-shell": "^3.0.0",
     "readline": "^1.3.0"
   }
 }
