--- a/testapp/package.json
+++ b/testapp/package.json
@@ -12,6 +12,7 @@
     "eventemitter": "^0.3.3",
     "events": "^3.3.0",
     "express": "~4.16.1",
+    "express-basic-auth": "^1.2.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.12",
